--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
   <title>Eplayas</title>
   <base href="/">
 
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <div id="container">
+  <div class="container">
     <app-core>Cargando aplicacion ...</app-core>
   </div>
 </body>
