--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Eplayas</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
+
   <base href="/">
-
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <div class="container">
+  <div class="ui container">
     <app-core>Cargando aplicacion ...</app-core>
   </div>
 </body>
