--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,12 @@
   <meta charset="utf-8">
   <title>Eplayas</title>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
-
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <div class="ui container">
+  <div>
     <app-core>Cargando aplicacion ...</app-core>
   </div>
 </body>
