--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div>
-    <app-core>Cargando aplicacion ...</app-core>
+    <app-core class="container">Cargando aplicacion ...</app-core>
   </div>
 </body>
 </html>
